--- a/eye_tracking_mouse/Settings.xaml
+++ b/eye_tracking_mouse/Settings.xaml
@@ -20,9 +20,24 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"></RowDefinition>
                         <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
                     </Grid.RowDefinitions>
                     <CheckBox Grid.Row="0" Grid.Column="0" Name="CheckboxAutostart" Checked="CheckboxAutostart_Checked" Unchecked="CheckboxAutostart_Unchecked">Launch application at windows startup</CheckBox>
-                    <TextBlock Grid.Row="1" Grid.Column="0" Name="TextBlockApplicationDescription"></TextBlock>
+                    <TextBlock Grid.Row="1" Grid.Column="0">
+                        <LineBreak/>
+                        Video tutorial: TODO: Add link <LineBreak/>
+                        <LineBreak/>
+                        This application is built on: <LineBreak/>
+                        <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"  NavigateUri="https://github.com/oblitum/Interception"> Oblita Interception </Hyperlink><LineBreak/>
+                        <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"  NavigateUri="https://github.com/Squirrel/Squirrel.Windows"> Squirrel.Windows</Hyperlink><LineBreak/>
+                        <Hyperlink RequestNavigate="Hyperlink_RequestNavigate"  NavigateUri="https://developer.tobii.com/consumer-eye-trackers/core-sdk/"> Tobii Core SDK</Hyperlink><LineBreak/>
+                    </TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Name="TextBlockVersion"></TextBlock>
+                    <TextBlock Grid.Row="3" Grid.Column="0">
+                        <LineBreak/>
+                        Support me: TODO: Add link
+                    </TextBlock>
                 </Grid>
             </TabItem>
             <TabItem Header="Key bindings">
