--- a/eye_tracking_mouse/CalibrationSettings.xaml
+++ b/eye_tracking_mouse/CalibrationSettings.xaml
@@ -8,15 +8,12 @@
         mc:Ignorable="d"
         Title="Advanced Calibration Settings" Height="356.51" Width="563.157"
         ResizeMode="NoResize">
-    <Window.Resources>
-        <local:IconToImageSourceConverter x:Key="IconToImageSourceConverter" />
-    </Window.Resources>
-    <Grid>
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
-            <ColumnDefinition Width="300"></ColumnDefinition>
-            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="10"></ColumnDefinition>
+            <ColumnDefinition ></ColumnDefinition>
+            <ColumnDefinition ></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"></RowDefinition>
@@ -36,31 +33,12 @@
             <RowDefinition Height="20"></RowDefinition>
         </Grid.RowDefinitions>
 
+        <local:IntegerPropertyControl Grid.Row="1" Grid.ColumnSpan="4" x:Name="CalibrationPointsCount" Label="Max arrows count" Maximum="5000" Minimum="1" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+        <local:IntegerPropertyControl Grid.Row="2" Grid.ColumnSpan="4" x:Name="CalibrationZoneSize" Label="Zone size in pixels" Maximum="500" Minimum="30" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+        <local:IntegerPropertyControl Grid.Row="3" Grid.ColumnSpan="4" x:Name="ConsideredZonesCount" Label="Considered arrows count" Maximum="50" Minimum="3" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+        <local:IntegerPropertyControl Grid.Row="4" Grid.ColumnSpan="4" x:Name="UpdatePeriodMs" Label="Update period (ms)" Maximum="500" Minimum="0" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
 
-        <TextBlock Grid.Row="1" Grid.Column="0">Max arrows count</TextBlock>
-        <Slider Grid.Row="1" Grid.Column="2" Name="CalibrationPointsCount" Minimum="1" Maximum="5000" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-        <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding ElementName=CalibrationPointsCount, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-        <Image  Grid.Row="1" Grid.Column="1" Name="CalibrationPointsCountTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-        <TextBlock Grid.Row="2" Grid.Column="0">Zone size in pixels</TextBlock>
-        <Slider Grid.Row="2" Grid.Column="2" Name="CalibrationZoneSize" Minimum="30" Maximum="500" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-        <TextBox Grid.Row="2" Grid.Column="3" Text="{Binding ElementName=CalibrationZoneSize, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-        <Image  Grid.Row="2" Grid.Column="1" Name="CalibrationZoneSizeTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-        <TextBlock Grid.Row="3" Grid.Column="0">Considered arrows count</TextBlock>
-        <Slider Grid.Row="3" Grid.Column="2" Name="ConsideredZonesCount" Minimum="1" Maximum="50" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-        <TextBox Grid.Row="3" Grid.Column="3" Text="{Binding ElementName=ConsideredZonesCount, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-        <Image  Grid.Row="3" Grid.Column="1" Name="ConsideredZonesCountTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-        <TextBlock Grid.Row="4" Grid.Column="0">Update period (ms)</TextBlock>
-        <Slider Grid.Row="4" Grid.Column="2" Name="UpdatePeriodMs" Minimum="1" Maximum="500" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-        <TextBox Grid.Row="4" Grid.Column="3" Text="{Binding ElementName=UpdatePeriodMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-        <Image  Grid.Row="4" Grid.Column="1" Name="UpdatePeriodMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-        <TextBlock Grid.Row="5" Grid.Column="0">Additional dimensions detalization</TextBlock>
-        <Slider Grid.Row="5" Grid.Column="2" Name="MultidimensionalDetalization" Minimum="1" Maximum="50" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-        <TextBox Grid.Row="5" Grid.Column="3" Text="{Binding ElementName=MultidimensionalDetalization, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-        <Image  Grid.Row="5" Grid.Column="1" Name="MultidimensionalDetalizationTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
+        <local:IntegerPropertyControl Grid.Row="5" Grid.ColumnSpan="4" x:Name="MultidimensionalDetalization" Label="Additional dimensions detalization" Maximum="50" Minimum="1" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
 
         <TextBlock Grid.Row="6" Grid.Column="0">Additional dimensions</TextBlock>
 
@@ -76,7 +54,7 @@
         <TextBlock Grid.Row="10" Grid.Column="0" HorizontalAlignment="Right">Head direction:</TextBlock>
         <CheckBox Grid.Row="10" Grid.Column="2" Name="HeadDirection" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed" />
 
-        <TextBlock Grid.Row="12" Grid.Column="0">Preset:</TextBlock>
+        <TextBlock Grid.Row="12" Grid.Column="0" HorizontalAlignment="Right">Preset:</TextBlock>
         <ComboBox Grid.Row="12" Grid.Column="2" x:Name="CalibrationModeCombo" SelectionChanged="CalibrationModeCombo_SelectionChanged">
             <ComboBoxItem>Multidimensional</ComboBoxItem>
             <ComboBoxItem>Simple &amp; Fast</ComboBoxItem>
