--- a/eye_tracking_mouse/Settings.xaml
+++ b/eye_tracking_mouse/Settings.xaml
@@ -7,9 +7,6 @@
         xmlns:local="clr-namespace:eye_tracking_mouse"
         mc:Ignorable="d"
         Title="Settings" ResizeMode="NoResize" Height="360" Width="570">
-    <Window.Resources>
-        <local:IconToImageSourceConverter x:Key="IconToImageSourceConverter" />
-    </Window.Resources>
     <Grid>
         <TabControl x:Name="TabControl">
             <TabItem Header="Application">
@@ -134,13 +131,12 @@
             </TabItem>
 
             <TabItem Header="Advancced" >
-                <Grid>
+                <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"></ColumnDefinition>
-                        <ColumnDefinition Width="auto"></ColumnDefinition>
-                        <ColumnDefinition Width="180"></ColumnDefinition>
-                        <ColumnDefinition Width="120"></ColumnDefinition>
-                        <ColumnDefinition Width="auto"></ColumnDefinition>
+                        <ColumnDefinition Width="20"></ColumnDefinition>
+                        <ColumnDefinition ></ColumnDefinition>
+                        <ColumnDefinition ></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20"></RowDefinition>
@@ -160,64 +156,83 @@
                         <RowDefinition Height="20"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="1" Grid.Column="0">Vertical scroll step</TextBlock>
-                    <Slider Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Name="VerticalScrollStep" Minimum="1" Maximum="15" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="1" Grid.Column="4" Text="{Binding ElementName=VerticalScrollStep, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="1" Grid.Column="1" Name="VerticalScrollStepTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
+                    <local:IntegerPropertyControl 
+                        Grid.Row="1" Grid.ColumnSpan="4" 
+                        x:Name="VerticalScrollStep" 
+                        Label="Vertical scroll step"
+                        Maximum="15" Minimum="1"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0">Horizontal scroll step</TextBlock>
-                    <Slider Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2" Name="HorizontalScrollStep" Minimum="1" Maximum="15" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="2" Grid.Column="4" Text="{Binding ElementName=HorizontalScrollStep, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="2" Grid.Column="1" Name="HorizontalScrollStepTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="3" Grid.Column="0">Calibration step in pixels</TextBlock>
-                    <Slider Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" Name="CalibrationStep" Minimum="1" Maximum="15" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="3" Grid.Column="4" Text="{Binding ElementName=CalibrationStep, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="3" Grid.Column="1" Name="CalibrationStepTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="4" Grid.Column="0">Click freeze time (ms)</TextBlock>
-                    <Slider Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Name="ClickFreezeTimeMs" Minimum="0" Maximum="1000" TickFrequency="10" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="4" Grid.Column="4" Text="{Binding ElementName=ClickFreezeTimeMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="4" Grid.Column="1" Name="ClickFreezeTimeMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="5" Grid.Column="0">Calibration freeze time (ms)</TextBlock>
-                    <Slider Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Name="CalibrationFreezeTimeMs" Minimum="0" Maximum="2000" TickFrequency="10" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="5" Grid.Column="4" Text="{Binding ElementName=CalibrationFreezeTimeMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="5" Grid.Column="1" Name="CalibrationFreezeTimeMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="6" Grid.Column="0">Double speed-up time (ms)</TextBlock>
-                    <Slider Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Name="DoubleSpeedUpTimeMs" Maximum="500" Minimum="{Binding ElementName=QuadrupleSpeedUpTimeMs, Path=Value}"  TickFrequency="10" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="6" Grid.Column="4" Text="{Binding ElementName=DoubleSpeedUpTimeMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="6" Grid.Column="1" Name="DoubleSpeedUpTimeMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="7" Grid.Column="0">Quadruple speed-up time (ms)</TextBlock>
-                    <Slider Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Name="QuadrupleSpeedUpTimeMs" Maximum="{Binding ElementName=DoubleSpeedUpTimeMs, Path=Value}" Minimum="0" TickFrequency="10" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="7" Grid.Column="4" Text="{Binding ElementName=QuadrupleSpeedUpTimeMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="7" Grid.Column="1" Name="QuadrupleSpeedUpTimeMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="8" Grid.Column="0">Modifier short press time (ms)</TextBlock>
-                    <Slider Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="2" Name="ModifierShortPressTimeMs" Minimum="0" Maximum="1000" TickFrequency="10" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="8" Grid.Column="4" Text="{Binding ElementName=ModifierShortPressTimeMs, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="8" Grid.Column="1" Name="ModifierShortPressTimeMsTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="9" Grid.Column="0">Smoothening points count</TextBlock>
-                    <Slider Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="2" Name="SmootheningPointsCount" Minimum="1" Maximum="400" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="9" Grid.Column="4" Text="{Binding ElementName=SmootheningPointsCount, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="9" Grid.Column="1" Name="SmootheningPointsCountTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="10" Grid.Column="0">Smoothening zone radius in pixels</TextBlock>
-                    <Slider Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="2" Name="SmotheningZoneRadius" Minimum="1" Maximum="1000" TickFrequency="1" IsSnapToTickEnabled="True" ValueChanged="Slider_ValueChanged"></Slider>
-                    <TextBox Grid.Row="10" Grid.Column="4" Text="{Binding ElementName=SmotheningZoneRadius, Path=Value, UpdateSourceTrigger=PropertyChanged}" Width="40" TextAlignment="Right"></TextBox>
-                    <Image  Grid.Row="10" Grid.Column="1" Name="SmotheningZoneRadiusTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
-
-                    <TextBlock Grid.Row="11" Grid.Column="0">Calibration mode</TextBlock>
+                    <local:IntegerPropertyControl 
+                        Grid.Row="2" Grid.ColumnSpan="4" 
+                        x:Name="HorizontalScrollStep" 
+                        Label="Horizontal scroll step"
+                        Maximum="15" Minimum="1"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="3" Grid.ColumnSpan="4" 
+                        x:Name="CalibrationStep" 
+                        Label="Calibration step in pixels"
+                        Maximum="15" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="4" Grid.ColumnSpan="4" 
+                        x:Name="ClickFreezeTimeMs" 
+                        Label="Click freeze time (ms)"
+                        Maximum="1000" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="5" Grid.ColumnSpan="4" 
+                        x:Name="CalibrationFreezeTimeMs" 
+                        Label="Calibration freeze time (ms)"
+                        Maximum="2000" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="6" Grid.ColumnSpan="4" 
+                        x:Name="DoubleSpeedUpTimeMs" 
+                        Label="Double speed-up time (ms)"
+                        Maximum="500" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                
+                    <local:IntegerPropertyControl 
+                        Grid.Row="7" Grid.ColumnSpan="4" 
+                        x:Name="QuadrupleSpeedUpTimeMs" 
+                        Label="Quadruple speed-up time (ms)"
+                        Maximum="500" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="8" Grid.ColumnSpan="4" 
+                        x:Name="ModifierShortPressTimeMs" 
+                        Label="Modifier short press time (ms)"
+                        Maximum="1000" Minimum="0"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="9" Grid.ColumnSpan="4" 
+                        x:Name="SmootheningPointsCount" 
+                        Label="Smoothening points count"
+                        Maximum="200" Minimum="1"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <local:IntegerPropertyControl 
+                        Grid.Row="10" Grid.ColumnSpan="4" 
+                        x:Name="SmotheningZoneRadius" 
+                        Label="Smoothening zone radius in pixels "
+                        Maximum="1000" Minimum="1"
+                        ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+                    
+                    <TextBlock Grid.Row="11" Grid.Column="0" Name="CalibrationModeLabel">Calibration mode</TextBlock>
                     <ComboBox Grid.Row="11" Grid.Column="2" x:Name="CalibrationModeCombo" SelectionChanged="CalibrationModeCombo_SelectionChanged">
                         <ComboBoxItem>Multidimensional</ComboBoxItem>
                         <ComboBoxItem>Simple &amp; Fast</ComboBoxItem>
                         <ComboBoxItem Name="CustomCalibrationMode"> Custom</ComboBoxItem>
                     </ComboBox>
                     <Button Grid.Row="11" Grid.Column="3" Grid.ColumnSpan="2" x:Name="AdvancedCalibrationSettings" Click="AdvancedCalibrationSettings_Click">Advanced calibration settings</Button>
-                    <Image  Grid.Row="11" Grid.Column="1" Name="CalibrationModeTooltip" Height="14" Source="{Binding Source={x:Static draw:SystemIcons.Question}, Converter={StaticResource IconToImageSourceConverter}, Mode=OneWay}" />
 
                     <Button Grid.Row="13" Grid.Column="2" Grid.ColumnSpan="1" Name="ResetDefaults" Click="ResetDefaults_Click">Reset to defaults</Button>
                 </Grid>
