--- a/eye_tracking_mouse/CalibrationSettings.xaml
+++ b/eye_tracking_mouse/CalibrationSettings.xaml
@@ -40,21 +40,21 @@
         <local:IntegerPropertyControl Grid.Row="3" Grid.ColumnSpan="4" x:Name="ConsideredZonesCount" Label="Considered arrows count" Maximum="50" Minimum="3" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
         <local:IntegerPropertyControl Grid.Row="4" Grid.ColumnSpan="4" x:Name="UpdatePeriodMs" Label="Update period (ms)" Maximum="500" Minimum="0" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
 
-        <local:IntegerPropertyControl Grid.Row="5" Grid.ColumnSpan="4" x:Name="MultidimensionalDetalization" Label="Additional dimensions detalization" Maximum="50" Minimum="1" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
+        <local:IntegerPropertyControl Grid.Row="5" Grid.ColumnSpan="4" x:Name="MultidimensionalDetalization" Label="Additional dimensions detalization %" Maximum="1000" Minimum="1" ValueChanged="Slider_ValueChanged"></local:IntegerPropertyControl>
 
         <TextBlock Grid.Row="6" Grid.Column="0">Additional dimensions</TextBlock>
 
         <TextBlock Grid.Row="7" Grid.Column="0" HorizontalAlignment="Right">Left eye:</TextBlock>
-        <CheckBox Grid.Row="7" Grid.Column="2" Name="LeftEye" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed" />
+        <local:Vector3BoolCheckboxControl Grid.Row="7" Grid.Column="2" x:Name="LeftEye" ValueChanged="CheckBox_Changed"/>
 
         <TextBlock Grid.Row="8" Grid.Column="0" HorizontalAlignment="Right">Right eye:</TextBlock>
-        <CheckBox Grid.Row="8" Grid.Column="2" Name="RightEye" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed" />
+        <local:Vector3BoolCheckboxControl Grid.Row="8" Grid.Column="2" x:Name="RightEye" ValueChanged="CheckBox_Changed" />
 
         <TextBlock Grid.Row="9" Grid.Column="0" HorizontalAlignment="Right">Head position:</TextBlock>
-        <CheckBox Grid.Row="9" Grid.Column="2" Name="HeadPosition" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed" />
+        <local:Vector3BoolCheckboxControl Grid.Row="9" Grid.Column="2" x:Name="HeadPosition" ValueChanged="CheckBox_Changed" />
 
         <TextBlock Grid.Row="10" Grid.Column="0" HorizontalAlignment="Right">Head direction:</TextBlock>
-        <CheckBox Grid.Row="10" Grid.Column="2" Name="HeadDirection" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="CheckBox_Changed" Unchecked="CheckBox_Changed" />
+        <local:Vector3BoolCheckboxControl Grid.Row="10" Grid.Column="2" x:Name="HeadDirection" ValueChanged="CheckBox_Changed" />
 
         <TextBlock Grid.Row="12" Grid.Column="0" HorizontalAlignment="Right">Preset:</TextBlock>
         <ComboBox Grid.Row="12" Grid.Column="2" x:Name="CalibrationModeCombo" SelectionChanged="CalibrationModeCombo_SelectionChanged">
